[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
extend-exclude = '''venv|^scratch|pybind11|importanize|.pyi$|lg_projects|ci_scripts/docker_ci/dvp'''

[tool.poetry]
name = "srcmlcpp"
version = "0.1.0"
description = "srcmlcpp: C++ code tranformer library and tools, based on srcML (https://srcml.org)"
authors = ["Pascal Thomet <pthomet@gmail.com>"]
# license = "to be defined"
readme = "README.md"
# homepage = "..."
repository = "https://github.com/pthom/srcmlcpp"
# documentation = "..."
keywords = ["code", "transformer", "cpp", "c++", "srcml", "pimpl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed"
]


packages = [
    { include = "codemanip", from = "packages" },
    { include = "litgen", from = "packages" },
    { include = "srcmlcpp", from = "packages" },
]
# include = ["CHANGELOG.md"]
# exclude = ["my_package/excluded.py"]

[tool.poetry.scripts]
#srcmlcpp = 'srcmlcpp.cli:run'
srcmlcpp = 'srcmlcpp.cli.srcmlcpp_cli:main'


[tool.poetry.dependencies]
python = "^3.9"
munch = "^2.5.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^3.0.0"
black = "^22.6.0"
jupyter-black = "^0.3.1"
mypy = "^0.961"
pre-commit = "^2.19.0"
importanize = "^0.7.0"
numpy = "^1.23.0"
flake8 = "^5.0.0"
flake8-bugbear = "^22.0.0"
Pygments = "^2.12.0"
jupyter = "^1.0.0"
notebook = "^6.4.12"
types-Pygments = "^2.13.1"
Flask = "^2.2.2"
pybind11 = "^2.10.0"
