[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
extend-exclude = '''venv|^scratch|pybind11|importanize|.pyi$|lg_projects|ci_scripts/docker_ci/dvp|md4c|external/SDL'''

[tool.poetry]
name = "litgen"
version = "0.9.0"
description = "litgen, aka \"Literate Generator\", an automatic python bindings generator for humans who like nice code and APIs, based on srcML (https://srcml.org)"
authors = ["Pascal Thomet <pthomet@gmail.com>"]
# license = "to be defined"
readme = "README.md"
# homepage = "..."
repository = "https://github.com/pthom/litgen"
# documentation = "..."
keywords = ["code", "transformer", "cpp", "c++", "srcml", "pimpl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed"
]


packages = [
    { include = "codemanip", from = "packages" },
    { include = "litgen", from = "packages" },
    { include = "srcmlcpp", from = "packages" },
]

[tool.poetry.scripts]
srcmlcpp = 'srcmlcpp.cli.srcmlcpp_cli:main'
litgen = 'litgen.cli.litgen_cli:main'


[tool.poetry.dependencies]
python = "^3.8"
munch = "*"
fire = "*"
pybind11 = "*"
black = "*"
# srcml_caller = "^0.1.2"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
jupyter-black = "*"
mypy = "*"
pre-commit = "^2.19.0"
importanize = "*"
numpy = "*"
flake8 = "*"
flake8-bugbear = "*"
Pygments = "*"
jupyter = "*"
notebook = "*"
types-Pygments = "*"
Flask = "*"
build = "*"
twine = "*"
snakeviz = "*"
patch = "*"
