[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litgen"
version = "0.20.0"
authors = [{ name = "Pascal Thomet", email = "pthomet@gmail.com" }]
description = "litgen, aka \"Literate Generator\", an automatic python bindings generator for humans who like nice code and APIs, based on srcML (https://srcml.org)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed"
]
keywords = ["code", "generator", "cpp", "c++", "srcml", "pybind11", "bindings"]

dependencies = [
    "munch",
    "fire",
    "pybind11",
    "nanobind",
    "black",
    "srcml_caller"
]

# package is ignored by hatchling... we have to use [tool.hatch.build.targets.wheel]
#packages = [
#    { include = "codemanip", from = "src" },
#    { include = "litgen", from = "src" },
#    { include = "srcmlcpp", from = "src" },
#]

[tool.hatch.build.targets.wheel]
packages = ["src/litgen", "src/codemanip", "src/srcmlcpp"]


[project.urls]
homepage = "https://pthom.github.io/litgen/"
repository = "https://github.com/pthom/litgen"
documentation = "https://pthom.github.io/litgen/"

[project.scripts]
srcmlcpp-cli = 'srcmlcpp.cli.srcmlcpp_cli:main'
litgen-cli = 'litgen.cli.litgen_cli:main'


[tool.black]
line-length = 120
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
extend-exclude = '''venv|^scratch|.ipynb$|_litgen_template|src/litgen/integration_tests/mylib|pybind11|importanize|.pyi$|lg_projects|ci_scripts/docker_ci/dvp|md4c|external/SDL'''
